# Optimizer

./: .gitignore  CMakeLists.txt  Functions.cpp  Functions.h  README.md  main.cpp
gui/: CMakeLists.txt  main.cpp
gui/include/gui/: DialogForm.h  Plot.h  mainwindow.h
gui/src/: DialogForm.cpp  Plot.cpp  mainwindow.cpp  mainwindow.ui
optim/: CMakeLists.txt
optim/cpp/: BoxDomain.cpp  Criterion.cpp  Function.cpp  Functions.cpp  LinearOptimizer.cpp  NewtonOptimizer.cpp  Optimizer.cpp  Random.cpp  RandomSearch.cpp  Track.cpp
optim/include/optim/: BoxDomain.h  Criterion.h  Function.h  Functions.h  LinearOptimizer.h  NewtonOptimizer.h  Optimizer.h  Random.h  RandomSearch.h  Task.h  TaskBuilder.h  Track.h
src/: BoxDomain.h  CommonRandom.h  Criteria.h  Criterion.h  Function.cpp  Function.h  Gradient.h  LinearOptimizer.h  Optimizer.cpp  Optimizer.h  Point.cpp  Point.h  PokakRibiere.h  RandomSearch.h  Track.h  Vector.h
src/cpp/: BoxDomain.cpp  Criteria.cpp  Criterion.cpp  Function.cpp  Gradient.cpp  LinearOptimizer.cpp  Optimizer.cpp  Random.cpp  RandomSearch.cpp  Track.cpp  Vector.cpp
